feat: Adiciona camada de application

--- a/server/ShowManager/ShowManager.Application/ShowManager.Application.csproj
+++ b/server/ShowManager/ShowManager.Application/ShowManager.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ShowManager.Dominio\ShowManager.Dominio.csproj" />
+    <ProjectReference Include="..\ShowManager.Infra\ShowManager.Infra.csproj" />
+  </ItemGroup>
+
 </Project>
