--- a/server/ShowManager/ShowManager.Web.API/ShowManager.Web.API.csproj
+++ b/server/ShowManager/ShowManager.Web.API/ShowManager.Web.API.csproj
@@ -8,7 +8,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2"/>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\ShowManager.Application\ShowManager.Application.csproj" />
 	</ItemGroup>
 
 </Project>
