refactor: Cria primeira migração e realiza varios ajustes

--- a/server/ShowManager/ShowManager.Application/ShowManager.Application.csproj
+++ b/server/ShowManager/ShowManager.Application/ShowManager.Application.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ShowManager.Dominio\ShowManager.Dominio.csproj" />
+    <ProjectReference Include="..\ShowManager.Exceptions\ShowManager.Exceptions.csproj" />
     <ProjectReference Include="..\ShowManager.Infra\ShowManager.Infra.csproj" />
   </ItemGroup>
 
