--- a/server/ShowManager/ShowManager.Web.API/ShowManager.Web.API.csproj
+++ b/server/ShowManager/ShowManager.Web.API/ShowManager.Web.API.csproj
@@ -10,12 +10,14 @@
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
 		<PackageReference Include="MediatR" Version="11.0.0" />
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\ShowManager.Application\ShowManager.Application.csproj" />
+	  <ProjectReference Include="..\ShowManager.Exceptions\ShowManager.Exceptions.csproj" />
 	</ItemGroup>
 
 </Project>
