refactor: Renomeia projeto de infra para infra.data

--- a/server/ShowManager/ShowManager.Application/ShowManager.Application.csproj
+++ b/server/ShowManager/ShowManager.Application/ShowManager.Application.csproj
@@ -16,7 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ShowManager.Dominio\ShowManager.Dominio.csproj" />
     <ProjectReference Include="..\ShowManager.Exceptions\ShowManager.Exceptions.csproj" />
-    <ProjectReference Include="..\ShowManager.Infra\ShowManager.Infra.csproj" />
+    <ProjectReference Include="..\ShowManager.Infra.Data\ShowManager.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
