--- a/server/ShowManager/ShowManager.Web.API/ShowManager.Web.API.csproj
+++ b/server/ShowManager/ShowManager.Web.API/ShowManager.Web.API.csproj
@@ -18,6 +18,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\ShowManager.Application\ShowManager.Application.csproj" />
 	  <ProjectReference Include="..\ShowManager.Exceptions\ShowManager.Exceptions.csproj" />
+	  <ProjectReference Include="..\ShowManager.Infra.Data\ShowManager.Infra.Data.csproj" />
 	</ItemGroup>
 
 </Project>
