feat: Cria classe para encriptar senha

--- a/server/ShowManager/ShowManager.Web.API/ShowManager.Web.API.csproj
+++ b/server/ShowManager/ShowManager.Web.API/ShowManager.Web.API.csproj
@@ -19,6 +19,7 @@
 	  <ProjectReference Include="..\ShowManager.Application\ShowManager.Application.csproj" />
 	  <ProjectReference Include="..\ShowManager.Exceptions\ShowManager.Exceptions.csproj" />
 	  <ProjectReference Include="..\ShowManager.Infra.Data\ShowManager.Infra.Data.csproj" />
+	  <ProjectReference Include="..\ShowManager.Infra\ShowManager.Infra.csproj" />
 	</ItemGroup>
 
 </Project>
