feat: Senha encriptador #2

--- a/server/ShowManager/ShowManager.Application/ShowManager.Application.csproj
+++ b/server/ShowManager/ShowManager.Application/ShowManager.Application.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\ShowManager.Dominio\ShowManager.Dominio.csproj" />
     <ProjectReference Include="..\ShowManager.Exceptions\ShowManager.Exceptions.csproj" />
     <ProjectReference Include="..\ShowManager.Infra.Data\ShowManager.Infra.Data.csproj" />
+    <ProjectReference Include="..\ShowManager.Infra\ShowManager.Infra.csproj" />
   </ItemGroup>
 
 </Project>
