--- a/server/ShowManager/ShowManager.Web.API/appsettings.Development.json
+++ b/server/ShowManager/ShowManager.Web.API/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Settings": {
+    "Password": {
+      "AdditionalKey": "qualquerstringaqui"
+    }
   }
 }
