--- a/server/ShowManager/ShowManager.Application/ShowManager.Application.csproj
+++ b/server/ShowManager/ShowManager.Application/ShowManager.Application.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="11.0.0" />
-	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
-	<PackageReference Include="MediatR" Version="11.0.0" />
-	<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="MediatR"/>
+	  <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection"/>
+	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" />
+
   </ItemGroup>
 
   <ItemGroup>
