--- a/server/ShowManager/Directory.Packages.props
+++ b/server/ShowManager/Directory.Packages.props
@@ -10,6 +10,8 @@
 
 	<ItemGroup Label="Geral">
 		<PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+		<PackageVersion Include="FluentValidation" Version="12.0.0" />
+		<PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
 		<PackageVersion Include="MediatR" Version="11.0.0" />
 		<PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 		<PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
@@ -17,7 +19,7 @@
 
 	<ItemGroup Label="EF Core">
 		<PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="$(MicrosoftPackageVersion)" />
-		<PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="$(MicrosoftPackageVersion)"/>
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="$(MicrosoftPackageVersion)" />
 		<PackageVersion Include="Microsoft.EntityFrameworkCore" Version="$(MicrosoftPackageVersion)" />
 		<PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="$(MicrosoftPackageVersion)" />
 	</ItemGroup>
