--- a/server/ShowManager/ShowManager.Application/ShowManager.Application.csproj
+++ b/server/ShowManager/ShowManager.Application/ShowManager.Application.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
+
     <PackageReference Include="MediatR" />
+	  <PackageReference Include="FluentValidation" />
 	  <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" />
 	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" />
 
